--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
             </p>
             <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
           </li>
+          <li class="projetos-item">
+            <p> Tabela de Classificação</p>
+            <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="mdLOqEp" data-user="wendell90776450" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/wendell90776450/pen/mdLOqEp">
+                  Tabela de classificação</a> by Wendell (<a href="https://codepen.io/wendell90776450">@wendell90776450</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          </li>
+          <li class="projetos-item">
+            <p> Super Trunfo</p>
+            <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="gOzRMyW" data-user="wendell90776450" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/wendell90776450/pen/gOzRMyW">
+                  Super Trunfo - Dia 8 Wendell</a> by Wendell (<a href="https://codepen.io/wendell90776450">@wendell90776450</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          </li>
 
     </main>
   </div>
